--- a/style.css
+++ b/style.css
@@ -1,4 +1,101 @@
+/* font-family: 'Poppins', sans-serif;
+font-family: 'Staatliches', cursive; */
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #E5E5E5;
+}
+
+body::before {
+  content: '';
+  width: 100%;
+  height: 436px;
+  background-color: #535971;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+h1, legend, button {
+  font-family: 'Staatliches', cursive;
+}
+
+p, label {
+  font-family: 'Poppins', sans-serif;
+}
+
+.page {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+header {
+  color: #FFFFFF;
+  margin-top: 140px;
+  max-width: 415px;
+}
+
+header h1 {
+  font-size: 48px;
+  line-height: 60px;
+}
+
+header p {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+form {
+  background-color: #FFFFFF;
+  padding: 64px;
+  margin-top: 58px;
+  border-radius: 20px 20px 0 0;
+}
+
+form fieldset {
+  border: none;
+}
+
+.col-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 22px;
+}
+
+form fieldset legend {
+  font-size: 24px;
+  line-height: 34px;
+  width: 100%;
+  color: #535971;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #E6E6F0;
+  margin-bottom: 36px;
+}
+
+form fieldset label {
+  font-size: 14px;
+  line-height: 24px;
+  color: #4E4958;
+}
+
+form fieldset label span {
+  font-size: 12px;
+  line-height: 20px;
+  color: #aca7b8;
+  margin-left: 8px;
+}
+
+form fieldset input {
+  width: 100%;
+  background: #FAFAFC;
+  border-radius: 8px;
+  border: 1px solid #E6E6F0;
+  height: 56px;
+  margin: 8px auto 16px;
 }
