--- a/style.css
+++ b/style.css
@@ -58,8 +58,13 @@ form {
   border-radius: 20px 20px 0 0;
 }
 
+form fieldset:first-child {
+  margin: 0;
+}
+
 form fieldset {
   border: none;
+  margin-top: 30px;
 }
 
 .col-2 {
