--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ body::before {
   z-index: -1;
 }
 
-h1, legend, button {
+h1, h2, legend, button {
   font-family: 'Staatliches', cursive;
 }
 
-p, label {
+p, label, input {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -103,4 +103,14 @@ form fieldset input {
   border: 1px solid #E6E6F0;
   height: 56px;
   margin: 8px auto 16px;
+  padding: 0 10px;
 }
+
+form h2 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 34px;
+  width: 100%;
+  color: #535971;
+}
+
