--- a/style.css
+++ b/style.css
@@ -114,3 +114,24 @@ form h2 {
   color: #535971;
 }
 
+.button-wrapper {
+  background-color: #535971;
+  height: 160px;
+  margin-bottom: 50px;
+  border-radius: 0 0 20px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  font-size: 20px;
+  line-height: 26px;
+  color: #FFFFFF;
+  background-color: #FF5374;
+  width: 608px;
+  height: 56px;
+  padding: 15px 40px;
+  border: none;
+  border-radius: 20px;
+}
